--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </div>
     </section>
 
-    <section class="contact-s">
+    <!-- <section class="contact-s">
 
 
         <div class="primary-contact-control">
@@ -280,7 +280,7 @@
             </div>
         </div>
 
-    </section>
+    </section> -->
 
 
         <footer id="other" class="footer-section">
