--- a/index.html
+++ b/index.html
@@ -282,7 +282,9 @@
 
     </section> -->
 
-
+   <div class="text">
+       <input type="text">
+   </div>
         <footer id="other" class="footer-section">
             <div class="fullfoot">
 
