--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     </section>
 
-    <section>
+    <!-- <section>
         <div class="primary-project-control">
 
             <div id="projects" class="project-container">
@@ -256,7 +256,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- <section class="contact-s">
 
