--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     </section>
 
-    <!-- <section>
+    <section>
         <div class="primary-project-control">
 
             <div id="projects" class="project-container">
@@ -256,9 +256,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="contact-s">
+    <section class="contact-s">
 
 
         <div class="primary-contact-control">
@@ -280,11 +280,8 @@
             </div>
         </div>
 
-    </section> -->
+    </section>
 
-   <div class="text">
-       <input type="text">
-   </div>
         <footer id="other" class="footer-section">
             <div class="fullfoot">
 
