--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
         </div>
         <div id="sidebar">
             <ul>
-                <li> <a href="#home">Home</a> </li>
-                <li> <a href="#about">About Us</a> </li>
-                <li> <a href="#projects">Projects</a> </li>
-                <li> <a href="#contact">Contact</a> </li>
-                <li> <a href="#other">Other</a> </li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About us</a></li>
+                <li><a href="#work">Projects</a></li>
+                <li><a href="#contact">Contact us</a></li>
             </ul>
 
             <section class="sidebar-section">
@@ -177,7 +176,7 @@
     </section>
 
 
-    <section id="works" class="sWorks">
+    <section id="work" class="sWorks">
            <div class="workContainer">
             <h2>RECENT PROJECTS</h2>
             <span class="p1">These are my Latest Recent Projects</span>
@@ -242,7 +241,7 @@
 
 
 
-    <section class="contact">
+    <section id="contact" class="contact">
             <div class="contact_line"></div>
         <div class="overlay"></div>
         <div class="content">
@@ -256,11 +255,14 @@
                 <!-- #1 -->
                 <div class="box">
                     <!--box-1-->
-                    <div class="icon"></div>
+                    <div class="icon fa fa-home"></div>
                     <div class="text">
                         <!--text-1-->
                         <h3>Address</h3>
-                        <p>822, Bijapur Base, Jumma Peth, Shukruwar Peth, Solapur-413002</p>
+                        <p>
+                            Sinhgad Institute
+                            Kondhwa Pune, Maharashtra 411048
+                            India.</p>
                     </div>
                     <!--text-1-->
                 </div>
@@ -268,11 +270,11 @@
                 <!-- #2 -->
                 <div class="box">
                     <!--box-2-->
-                    <div class="icon"></div>
+                    <div class="icon fa fa-phone"></div>
                     <div class="text">
                         <!--text-2-->
                         <h3>Phone</h3>
-                        <p>86-23-08-98-14</p>
+                        <p>+91 8623089814</p>
                     </div>
                     <!--text-2-->
                 </div>
@@ -280,11 +282,11 @@
                 <!-- #3 -->
                 <div class="box">
                     <!--box-3-->
-                    <div class="icon"></div>
+                    <div class="icon fa fa-envelope "> </div>
                     <div class="text">
                         <!--text-3-->
                         <h3>Email</h3>
-                        <p>avezqureshi14@gmail.com</p>
+                        <p>aveznqureshi14@gmail.com</p>
                     </div>
                     <!--text-3-->
                 </div>
@@ -343,10 +345,9 @@
                     delectus alias ipsum recusandae vitae! Laudantium, quisquam amet. Asperiores odio nostrum sapiente?
                 </p>
                 <ul class="sci">
-                    <li><a href="#" class="fa fa-facebook"></a></li>
+                    <li><a href="#" class="fa fa-linkedin"></a></li>
+                    <li><a href="#" class="fa fa-github"></a></li>
                     <li><a href="#" class="fa fa-twitter"></a></li>
-                    <li><a href="#" class="fa fa-instagram"></a></li>
-                    <li><a href="#" class="fa fa-youtube"></a></li>
                 </ul>
             </div>
 
@@ -354,12 +355,10 @@
             <div class="sec quicklinks">
                 <h2>Quick Links</h2>
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Terms and Conditions</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About us</a></li>
+                    <li><a href="#work">Projects</a></li>
+                    <li><a href="#contact">Contact us</a></li>
                 </ul>
             </div>
             <div class="sec footcontact">
