--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     </footer>
     <div>
         <div class="copyrightText">
-            <p>Copyright &copy; 2022 Avez Qureshi. All Rights Reserved.</p>
+            <p> &copy; 2022 Avez Qureshi. All Rights Reserved.</p>
         </div>
     </div>
 
@@ -386,8 +386,8 @@
     <script>
         jQuery(document).ready(function($) {
             $('.counter').counterUp({
-                delay: 10,
-                time: 50000
+                delay: 100,
+                time: 10000
             });
         });
 
