--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h1>A Frontend focused Web Developer <br> building the Frontend of Websites<br> that leads to the success of
                 the overall product</h1>
             <div class="buttons1">
-                <a href="#projects"> <button class="btn" id="btn1">VIEW PROJECTS</button></a>
+                <a href="#work"> <button class="btn" id="btn1">VIEW PROJECTS</button></a>
                 <a href="#about"><button class="btn" id="btn2">MORE ABOUT ME</button></a>
             </div>
         </div>
