--- a/index.html
+++ b/index.html
@@ -298,7 +298,8 @@
 
             <div class="contactForm">
                 <!--contactForm-->
-                <form>
+                <form   action="https://formspree.io/f/mjvlvobj"
+                method="POST">
                     <h2>Send Message</h2>
                     <div class="inputBox">
                         <!--inputBox1-->
@@ -309,14 +310,14 @@
 
                     <div class="inputBox">
                         <!--inputBox2-->
-                        <input type="text" name="" required="required">
+                        <input type="text" name="_replyto" required="required">
                         <span>Email</span>
                     </div>
                     <!--inputBox2-->
 
                     <div class="inputBox">
                         <!--inputBox3-->
-                        <textarea required="required"></textarea>
+                        <textarea name="message required="required"></textarea>
                         <span>Type your Message...</span>
                     </div>
                     <!--inputBox3-->
@@ -333,6 +334,9 @@
         <!--container-->
 
     </section>
+
+
+
 
 
 
@@ -392,6 +396,29 @@
         });
 
     </script>
+
+<script>
+    var form = document.getElementById("my-form");
+    
+    async function handleSubmit(event) {
+      event.preventDefault();
+      var status = document.getElementById("my-form-status");
+      var data = new FormData(event.target);
+      fetch(event.target.action, {
+        method: form.method,
+        body: data,
+        headers: {
+            'Accept': 'application/json'
+        }
+      }).then(response => {
+        status.innerHTML = "Thanks for your submission!";
+        form.reset()
+      }).catch(error => {
+        status.innerHTML = "Oops! There was a problem submitting your form"
+      });
+    }
+    form.addEventListener("submit", handleSubmit)
+</script>
 </body>
 
 </html>
