--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,12 +50,10 @@
 
             <section class="sidebar-section">
                 <p>
-                    I'm a <span class="high-light">Frontend Web Developer </span> building the Front-end of Websites and
-                    Web Applications that leads
-                    to
-                    the
-                    success of the overall product. Check out some of my work in the <span class="high-light">Projects
-                    </span> section.
+                    I'm a passionate <span class="high-light" style="color: #555;">C++ Programmer and Web Developer </span> I like solving
+                    Problems using Computer Science, building the Front-End and Back-End of Websites and Web
+                    Applications using <span class="high-light" style="color: #555;">MERN Stack</span> and along with this I am also an
+                    active <span class="high-light" style="color: #555;">Open Source Contirbutor</span>
                 </p>
             </section>
         </div>
@@ -99,14 +98,13 @@
             </div>
         </div>
 
-        <div class="main-home-content">
-            <h2>HEY, I'M AVEZ QURESHI</h2>
-            <h1>A Frontend focused Web Developer <br> building the Frontend of Websites<br> that leads to the success of
-                the overall product</h1>
-            <div class="buttons1">
-                <a href="#work"> <button class="btn" id="btn1">VIEW PROJECTS</button></a>
-                <a href="#about"><button class="btn" id="btn2">MORE ABOUT ME</button></a>
-            </div>
+        <div class="main-home-content" >
+            <h2 data-aos="fade-up" >HEY, I'M AVEZ QURESHI</h2>
+            <h1 data-aos="fade-up">A Focused Programmer, Web Developer <br> and an active Open Source Contibutor
+                <div class="buttons1" data-aos="fade-up">
+                    <a href="#work"> <button class="btn" id="btn1">VIEW PROJECTS</button></a>
+                    <a href="#about"><button class="btn" id="btn2">MORE ABOUT ME</button></a>
+                </div>
         </div>
     </div>
 
@@ -116,49 +114,33 @@
         <div class="primary-about-control">
             <div class="about_line"></div>
 
-            <div id="about" class="about-container">
+            <div id="about" class="about-container" data-aos="fade">
 
                 <h2>About ME</h2>
-                <span class="p1">Here you will find more information about me, what I do, and my current skills mostly
+                <span class="p1">Here you might know something more about me, my current skills mostly
                     in terms
                     of
                     programming and technology</span>
                 <div class="secondary-about-control">
 
 
-                    <div class="content_details">
+                    <div class="content_details" data-aos="fade-up">
                         <h3>Get to know me!</h3>
 
                         <p class="p2">
-                            I'm a <span class="high-light">Frontend Web Developer </span> building the Front-end of
-                            Websites and Web Applications that leads
-                            to
-                            the
-                            success of the overall product. Check out some of my work in the <span
-                                class="high-light">Projects </span> section.
-                        </p>
-                        <br>
-                        <p class="p2">
-                            I also like sharing content related to the stuff that I have learned over the years in Web
-                            Development so it
-                            can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin
-                            where I
-                            post
-                            useful content related to Web Development and Programming
-                        </p>
-                        <br>
-                        <p class="p2">
-                            I'm open to Job opportunities where I can contribute, learn and grow. If you have a good
-                            opportunity
-                            that
-                            matches my skills and experience then don't hesitate to contact me.
+                            I'm a passionate <span class="high-light">C++ Programmer and Web Developer </span> I like
+                            solving Problems using Computer Science, building the Front-End and Back-End of Websites and
+                            Web Applications using <span class="high-light">MERN Stack</span> and along with this I am
+                            also an active <span class="high-light">Open Source Contirbutor</span>
+
                         </p>
                     </div>
 
-                    <div class="content-skills">
+                    <div class="content-skills" data-aos="fade-up">
                         <h3 class="title-content-skills">My Skills</h3>
 
                         <div class="skills">
+                            <div class="skill_skill">C++</div>
                             <div class="skill_skill">HTML</div>
                             <div class="skill_skill">CSS</div>
                             <div class="skill_skill">JavaScript</div>
@@ -166,7 +148,7 @@
                             <div class="skill_skill">Python</div>
                             <div class="skill_skill">Django</div>
                             <div class="skill_skill">Bootstrap</div>
-                            <div class="skill_skill">GIT</div>
+                            <div class="skill_skill">Git</div>
                             <div class="skill_skill">Github</div>
                         </div>
                     </div>
@@ -179,14 +161,14 @@
 
 
     <section id="work" class="sWorks">
-        <div class="workContainer">
+        <div class="workContainer" data-aos="fade">
             <h2>RECENT PROJECTS</h2>
             <span class="p1">These are my Latest Recent Projects</span>
         </div>
 
-        <div class="projectSection">
+        <div class="projectSection" data-aos="fade-up">
 
-            <div class="project">
+            <div class="project" >
                 <img src="bg1.jpg" alt="" srcset="">
                 <div class="bg"></div>
                 <div class="caption">
@@ -245,7 +227,7 @@
                 <img src="bg2.jpg" alt="" srcset="">
                 <div class="bg"></div>
                 <div class="caption">
-                    <a href="#" title="project6" > <span class="material-icons">
+                    <a href="#" title="project6"> <span class="material-icons">
                             insert_link
                         </span>
                     </a>
@@ -264,11 +246,11 @@
     <section id="contact" class="contact">
         <div class="contact_line"></div>
         <div class="overlay"></div>
-        <div class="content">
+        <div class="content" data-aos="fade">
             <h2>Contact Us</h2>
             <p>Feel free to contact me</p>
         </div>
-        <div class="container">
+        <div class="container" data-aos="fade-up">
             <!--container-->
             <div class="contactInfo">
                 <!--contactInfo-->
@@ -362,10 +344,10 @@
         <div class="f-container">
             <div class="sec aboutus">
                 <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa ad! Provident cupiditate
-                    delectus alias ipsum recusandae vitae! Laudantium, quisquam amet. Asperiores odio nostrum sapiente
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, culpa ad! Provident cupiditate
-                    delectus alias ipsum recusandae vitae! Laudantium, quisquam amet. Asperiores odio nostrum sapiente?
+                <p style="color: #fff;" > I'm a passionate <span class="high-light" style="color: #555;">C++ Programmer and Web Developer </span> I like solving
+                    Problems using Computer Science, building the Front-End and Back-End of Websites and Web
+                    Applications using <span class="high-light" style="color: #555;">MERN Stack</span> and along with this I am also an
+                    active <span class="high-light" style="color: #555;">Open Source Contirbutor</span>
                 </p>
                 <ul class="sci">
                     <li><a href="https://www.linkedin.com/in/avez-qureshi-2bb420228/" class="fa fa-linkedin"></a></li>
@@ -437,6 +419,15 @@
         }
         form.addEventListener("submit", handleSubmit)
     </script>
+     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+     <script>
+         AOS.init(
+             {
+                 offset: 300, // offset (in px) from the original trigger point
+                 duration: 1000, // values from 0 to 3000, with step 50ms
+             }
+         );
+     </script>
 </body>
 
 </html>
