--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="projectSection" data-aos="fade-up">
 
             <div class="project" >
-                <img src="bg1.jpg" alt="" srcset="">
+                <img src="Picture1.png" alt="" srcset="">
                 <div class="bg"></div>
                 <div class="caption">
                     <a href="#"> <span class="material-icons">
@@ -424,7 +424,7 @@
          AOS.init(
              {
                  offset: 300, // offset (in px) from the original trigger point
-                 duration: 1000, // values from 0 to 3000, with step 50ms
+                 duration: 10000, // values from 0 to 3000, with step 50ms
              }
          );
      </script>
