--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                             insert_link
                         </span>
                     </a>
+                    <h1>Mini Projects Web</h1>
                 </div>
             </div>
 
