--- a/index.html
+++ b/index.html
@@ -168,16 +168,19 @@
 
         <div class="projectSection" data-aos="fade-up">
 
-            <div class="project" >
+            <div class="project">
                 <img src="Picture1.png" alt="" srcset="">
-                <div class="bg"></div>
-                <div class="caption">
-                    <a href="#"> <span class="material-icons">
-                            insert_link
-                        </span>
-                    </a>
+                <div class="bg">
+                  <div class="caption">
+                    <h1>Mini Projects Web</h1>
+                    <p style="color: #fff; text-align: center;  margin-top: 10px; margin-bottom: 10px; letter-spacing: 1px;" >This Site contains 100's of CSS and JavaScript Components whose each and every line of Code is written by me.</p>
+                    <a href="https://avezqureshi14.github.io/toolbox/"> <span class="material-icons">
+                        insert_link
+                    </span>
+                </a>
+                  </div>
                 </div>
-            </div>
+              </div>
 
             <div class="project">
                 <img src="bg2.jpg" alt="" srcset="">
