--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avez Qureshi</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
 </head>
 
 <body>
@@ -173,7 +173,7 @@
                 <div class="bg">
                   <div class="caption">
                     <h1>Mini Projects Web</h1>
-                    <p style="color: #fff; text-align: center;  margin-top: 10px; margin-bottom: 10px; letter-spacing: 1px;" >This Site contains 100's of CSS and JavaScript Components whose each and every line of Code is written by me.</p>
+                    <p style="color: #fff; text-align: center;  margin-top: 10px; margin-bottom: 10px; letter-spacing: 1px;"  >This Site contains 100's of CSS and JavaScript Components whose each and every line of Code is written by me.</p>
                     <a href="https://avezqureshi14.github.io/toolbox/"> <span class="material-icons">
                         insert_link
                     </span>
