--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <h2 data-aos="fade-up" >HEY, I'M AVEZ QURESHI</h2>
             <h1 data-aos="fade-up">A Focused Programmer, Web Developer <br> and an active Open Source Contibutor
                 <div class="buttons1" data-aos="fade-up">
-                    <a href="#work"> <button class="btn" id="btn1">VIEW PROJECTS</button></a>
-                    <a href="#about"><button class="btn" id="btn2">MORE ABOUT ME</button></a>
+                    <a href="#work"> <button class="btn" id="btn1" style="cursor: pointer;">VIEW PROJECTS</button></a>
+                    <a href="#about"><button class="btn" id="btn2" style="cursor: pointer;">MORE ABOUT ME</button></a>
                 </div>
         </div>
     </div>
@@ -174,7 +174,7 @@
                   <div class="caption">
                     <h1>Mini Projects Web</h1>
                     <p style="color: #fff; text-align: center;  margin-top: 10px; margin-bottom: 10px; letter-spacing: 1px;"  >This Site contains 100's of CSS and JavaScript Components whose each and every line of Code is written by me.</p>
-                    <a href="https://avezqureshi14.github.io/toolbox/"> <span class="material-icons">
+                    <a href="https://avezqureshi14.github.io/toolbox/" target="__blank"> <span class="material-icons">
                         insert_link
                     </span>
                 </a>
