--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li><a href="#contact">Contact us</a></li>
             </ul>
 
-            <section class="sidebar-section">
+            <section class="sidebar-section" title="About me" >
                 <p>
                     I'm a passionate <span class="high-light" style="color: #555;">C++ Programmer and Web Developer </span> I like solving
                     Problems using Computer Science, building the Front-End and Back-End of Websites and Web
@@ -171,7 +171,7 @@
             <div class="project">
                 <img src="Picture1.png" alt="" srcset="">
                 <div class="bg">
-                  <div class="caption">
+                  <div class="caption" title="Mini Projects Web" >
                     <h1>Mini Projects Web</h1>
                     <p style="color: #fff; text-align: center;  margin-top: 10px; margin-bottom: 10px; letter-spacing: 1px;"  >This Site contains 100's of CSS and JavaScript Components whose each and every line of Code is written by me.</p>
                     <a href="https://avezqureshi14.github.io/toolbox/" target="__blank"> <span class="material-icons">
@@ -353,9 +353,9 @@
                     active <span class="high-light" style="color: #555;">Open Source Contirbutor</span>
                 </p>
                 <ul class="sci">
-                    <li><a href="https://www.linkedin.com/in/avez-qureshi-2bb420228/" class="fa fa-linkedin"></a></li>
-                    <li><a href="https://github.com/avezqureshi14" class="fa fa-github"></a></li>
-                    <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="https://www.linkedin.com/in/avez-qureshi-2bb420228/" class="fa fa-linkedin" title="Avez on Linkedin"></a></li>
+                    <li><a href="https://github.com/avezqureshi14" class="fa fa-github" title="Avez on Github"></a></li>
+                    <li><a href="#" class="fa fa-twitter" title="Avez on Twitter"></a></li>
                 </ul>
             </div>
 
@@ -370,7 +370,7 @@
                 </ul>
             </div>
             <div class="sec footcontact">
-                <div class="counters">
+                <div class="counters" title="Lines of Code" >                        
 
                     <h2>Lines of Code</h2>
                     <div class="counter">10000</div>
